--- a/webserver/mysite/webapp/static/webapp/test_for_animation.css
+++ b/webserver/mysite/webapp/static/webapp/test_for_animation.css
@@ -21,6 +21,7 @@ div {
 #solar_system {
     position:absolute;
     margin-top:50px;
+    transform-style: preserve-3d;
 }
 #explain_box {
     position:absolute;
@@ -82,7 +83,7 @@ div {
 }
 /* MERCURY */
 .mercury-h, .mercury-v {
-    background-color: rgba(169, 169, 169, 0.3);
+    background-color: rgba(169, 169, 169, 0.7);
     --del: 0.5s;
     animation: mercury-flash linear var(--del) infinite;
     animation-delay: calc(var(--c) * var(--del) / var(--t));
@@ -185,7 +186,7 @@ div {
 }
 /* SUN */
 .sun-h, .sun-v {
-    background-color: rgba(255, 215, 0, 0.3);
+    background-color: rgba(255, 215, 0, 7);
     --del: 0.5s;
     animation: sun-flash linear var(--del) infinite;
     --h: var(--w);
