--- a/webserver/mysite/webapp/static/webapp/test_for_animation.css
+++ b/webserver/mysite/webapp/static/webapp/test_for_animation.css
@@ -79,19 +79,17 @@ div {
     --w: calc(var(--r) * var(--u) * 2);
     top: 50%;
 }
-.mercury.h, .mercury.v {
-    --h: var(--w);
-    border-radius: 100vmax;
-    background-color: rgba(169, 169, 169, 0.7); /* SPHERE COLOR */
-    top: 0;
-    left: 0;
-    box-shadow: 0 0 1em 1em #0000;
-}
 .mercury-h {
-    translate:
-        calc(var(--r) * var(--u) - var(--w) / 2)
-        calc(var(--r) * var(--u) - var(--w) / 2)
-        calc((var(--d) * var(--s) * var(--u)));
+    .h,
+    .v {
+        --h: var(--w);
+        border-radius: 100vmax;
+        background-color: rgba(169, 169, 169, 0.7); /* SPHERE COLOR */
+        top: 0;
+        left: 0;
+        box-shadow: 0 0 1em 1em #0000;
+    }
+    translate: calc(var(--r) * var(--u) - var(--w) / 2) calc(var(--r) * var(--u) - var(--w) / 2) calc((var(--d) * var(--s) * var(--u)));
     --del: 0.5s; /* FLASH SPEED */
     animation: mercury-flash linear var(--del) infinite;
     animation-delay: calc(var(--c) * var(--del) / var(--t));
@@ -147,20 +145,17 @@ div {
     animation: rotates var(--rotation-speed) linear infinite;
 }
 /* Styles for the inner lines of the globe */
-
-.sun.h, .sun.v {
-    --h: var(--w);
-    border-radius: 100vmax;
-    background-color: rgba(255, 215, 0, 0.8); /* SPHERE COLOR */
-    top: 0;
-    left: 0;
-    box-shadow: 0 0 1em 1em #0000;
-}
 .sun-h {
-    translate: 
-        calc(var(--r) * var(--u) - var(--w) / 2)
-        calc(var(--r) * var(--u) - var(--w) / 2)
-        calc((var(--d) * var(--s) * var(--u)));
+    .h,
+    .v {
+        --h: var(--w);
+        border-radius: 100vmax;
+        background-color: rgba(255, 215, 0, 0.8); /* SPHERE COLOR */
+        top: 0;
+        left: 0;
+        box-shadow: 0 0 1em 1em #0000;
+    }
+    translate: calc(var(--r) * var(--u) - var(--w) / 2) calc(var(--r) * var(--u) - var(--w) / 2) calc((var(--d) * var(--s) * var(--u)));
     --del: 0.5s; /* FLASH SPEED */
     animation: sun-flash linear var(--del) infinite;
     animation-delay: calc(var(--c) * var(--del) / var(--t));
@@ -217,20 +212,17 @@ div {
     animation: rotates var(--rotation-speed) linear infinite;
 }
 /* Styles for the inner lines of the globe */
-
-.h, .v {
-    --h: var(--w);
-    border-radius: 100vmax;
-    background-color: rgba(255, 179, 102, 0.7); /* SPHERE COLOR */
-    top: 0;
-    left: 0;
-    box-shadow: 0 0 1em 1em #ffe5b800;
-}
 .venus-h {
-    translate: 
-        calc(var(--r) * var(--u) - var(--w) / 2)
-        calc(var(--r) * var(--u) - var(--w) / 2)
-        calc((var(--d) * var(--s) * var(--u)));
+    .h,
+    .v {
+        --h: var(--w);
+        border-radius: 100vmax;
+        background-color: rgba(255, 179, 102, 0.7); /* SPHERE COLOR */
+        top: 0;
+        left: 0;
+        box-shadow: 0 0 1em 1em #ffe5b800;
+    }
+    translate: calc(var(--r) * var(--u) - var(--w) / 2) calc(var(--r) * var(--u) - var(--w) / 2) calc((var(--d) * var(--s) * var(--u)));
     --del: 0.5s; /* FLASH SPEED */
     animation: venus-flash linear var(--del) infinite;
     animation-delay: calc(var(--c) * var(--del) / var(--t));
@@ -286,20 +278,17 @@ div {
     animation: rotates var(--rotation-speed) linear infinite;
 }
 /* Styles for the inner lines of the globe */
-
-.h, .v {
-    --h: var(--w);
-    border-radius: 100vmax;
-    background-color: rgba(65, 105, 225, 0.7); /* SPHERE COLOR (Ocean Blue) */
-    top: 0;
-    left: 0;
-    box-shadow: 0 0 1em 1em #0000;
-}
 .earth-h {
-    translate:
-        calc(var(--r) * var(--u) - var(--w) / 2)
-        calc(var(--r) * var(--u) - var(--w) / 2)
-        calc((var(--d) * var(--s) * var(--u)));
+    .h,
+    .v {
+        --h: var(--w);
+        border-radius: 100vmax;
+        background-color: rgba(65, 105, 225, 0.7); /* SPHERE COLOR (Ocean Blue) */
+        top: 0;
+        left: 0;
+        box-shadow: 0 0 1em 1em #0000;
+    }
+    translate: calc(var(--r) * var(--u) - var(--w) / 2) calc(var(--r) * var(--u) - var(--w) / 2) calc((var(--d) * var(--s) * var(--u)));
     --del: 0.5s; /* FLASH SPEED */
     animation: earth-flash linear var(--del) infinite;
     animation-delay: calc(var(--c) * var(--del) / var(--t));
@@ -356,20 +345,17 @@ div {
     animation: rotates var(--rotation-speed) linear infinite;
 }
 /* Styles for the inner lines of the globe */
-
-.h, .v {
-    --h: var(--w);
-    border-radius: 100vmax;
-    background-color: rgba(255, 212, 144, 0.5); /* SPHERE COLOR */
-    top: 0;
-    left: 0;
-    box-shadow: 0 0 1em 1em #ffe5b800;
-}
 .mars-h {
-    translate: 
-        calc(var(--r) * var(--u) - var(--w) / 2)
-        calc(var(--r) * var(--u) - var(--w) / 2)
-        calc((var(--d) * var(--s) * var(--u)));
+    .h,
+    .v {
+        --h: var(--w);
+        border-radius: 100vmax;
+        background-color: rgba(255, 212, 144, 0.5); /* SPHERE COLOR */
+        top: 0;
+        left: 0;
+        box-shadow: 0 0 1em 1em #ffe5b800;
+    }
+    translate: calc(var(--r) * var(--u) - var(--w) / 2) calc(var(--r) * var(--u) - var(--w) / 2) calc((var(--d) * var(--s) * var(--u)));
     --del: 0.5s; /* FLASH SPEED */
     animation: mars-flash linear var(--del) infinite;
     animation-delay: calc(var(--c) * var(--del) / var(--t));
@@ -426,20 +412,17 @@ div {
     animation: rotates var(--rotation-speed) linear infinite;
 }
 /* Styles for the inner lines of the globe */
-
-.h, .v {
-    --h: var(--w);
-    border-radius: 100vmax;
-    background-color: rgba(220, 150, 80, 0.7); /* SPHERE COLOR (Tan-Orange) */
-    top: 0;
-    left: 0;
-    box-shadow: 0 0 1em 1em #0000;
-}
 .jupiter-h {
-    translate: 
-        calc(var(--r) * var(--u) - var(--w) / 2)
-        calc(var(--r) * var(--u) - var(--w) / 2)
-        calc((var(--d) * var(--s) * var(--u)));
+    .h,
+    .v {
+        --h: var(--w);
+        border-radius: 100vmax;
+        background-color: rgba(220, 150, 80, 0.7); /* SPHERE COLOR (Tan-Orange) */
+        top: 0;
+        left: 0;
+        box-shadow: 0 0 1em 1em #0000;
+    }
+    translate: calc(var(--r) * var(--u) - var(--w) / 2) calc(var(--r) * var(--u) - var(--w) / 2) calc((var(--d) * var(--s) * var(--u)));
     --del: 0.5s; /* FLASH SPEED */
     animation: jupiter-flash linear var(--del) infinite;
     animation-delay: calc(var(--c) * var(--del) / var(--t));
@@ -495,28 +478,20 @@ div {
     --rotation-speed: 10s;
     animation: rotates var(--rotation-speed) linear infinite;
 }
-/* Styles for the inner lines of the globe */
-/* -planet.h */
 .saturne-h {
-  /* Common styles for both .h and .v */
-  .h,
-  .v {
-    --h: var(--w);
-    border-radius: 100vmax;
-    background-color: rgba(210, 180, 140, 0.7); /* SPHERE COLOR (Light Tan-Gold) */
-    top: 0;
-    left: 0;
-    box-shadow: 0 0 1em 1em #0000;
-  }
-
-  /* Specific styles for .saturne-h */
-  translate:
-    calc(var(--r) * var(--u) - var(--w) / 2)
-    calc(var(--r) * var(--u) - var(--w) / 2)
-    calc((var(--d) * var(--s) * var(--u)));
-  --del: 0.5s; /* FLASH SPEED */
-  animation: saturne-flash linear var(--del) infinite;
-  animation-delay: calc(var(--c) * var(--del) / var(--t));
+    .h,
+    .v {
+        --h: var(--w);
+        border-radius: 100vmax;
+        background-color: rgba(210, 180, 140, 0.7); /* SPHERE COLOR (Light Tan-Gold) */
+        top: 0;
+        left: 0;
+        box-shadow: 0 0 1em 1em #0000;
+    }
+    translate: calc(var(--r) * var(--u) - var(--w) / 2) calc(var(--r) * var(--u) - var(--w) / 2) calc((var(--d) * var(--s) * var(--u)));
+    --del: 0.5s; /* FLASH SPEED */
+    animation: saturne-flash linear var(--del) infinite;
+    animation-delay: calc(var(--c) * var(--del) / var(--t));
 }
 /* The horizontal lines are created with SCSS and a loop, which can be approximated with a set of elements */
 /* For this example, we'll assume a single globe for simplicity, but you would duplicate the .line and .h elements
@@ -570,21 +545,17 @@ div {
     animation: rotates var(--rotation-speed) linear infinite;
 }
 /* Styles for the inner lines of the globe */
-
-
-.h, .v {
-    --h: var(--w);
-    border-radius: 100vmax;
-    background-color: rgba(135, 206, 235, 0.7); /* SPHERE COLOR (Light Sky Blue) */
-    top: 0;
-    left: 0;
-    box-shadow: 0 0 1em 1em #0000;
-}
 .uranus-h {
-    translate: 
-        calc(var(--r) * var(--u) - var(--w) / 2)
-        calc(var(--r) * var(--u) - var(--w) / 2)
-        calc((var(--d) * var(--s) * var(--u)));
+    .h,
+    .v {
+        --h: var(--w);
+        border-radius: 100vmax;
+        background-color: rgba(135, 206, 235, 0.7); /* SPHERE COLOR (Light Sky Blue) */
+        top: 0;
+        left: 0;
+        box-shadow: 0 0 1em 1em #0000;
+    }
+    translate: calc(var(--r) * var(--u) - var(--w) / 2) calc(var(--r) * var(--u) - var(--w) / 2) calc((var(--d) * var(--s) * var(--u)));
     --del: 0.5s; /* FLASH SPEED */
     animation: uranus-flash linear var(--del) infinite;
     animation-delay: calc(var(--c) * var(--del) / var(--t));
@@ -641,21 +612,17 @@ div {
     animation: rotates var(--rotation-speed) linear infinite;
 }
 /* Styles for the inner lines of the globe */
-
-
-.h, .v {
-    --h: var(--w);
-    border-radius: 100vmax;
-    background-color: rgba(30, 144, 255, 0.7); /* SPHERE COLOR (Dodge Blue) */
-    top: 0;
-    left: 0;
-    box-shadow: 0 0 1em 1em #0000;
-}
 .neptune-h {
-    translate: 
-        calc(var(--r) * var(--u) - var(--w) / 2)
-        calc(var(--r) * var(--u) - var(--w) / 2)
-        calc((var(--d) * var(--s) * var(--u)));
+    .h,
+    .v {
+        --h: var(--w);
+        border-radius: 100vmax;
+        background-color: rgba(30, 144, 255, 0.7); /* SPHERE COLOR (Dodge Blue) */
+        top: 0;
+        left: 0;
+        box-shadow: 0 0 1em 1em #0000;
+    }
+    translate: calc(var(--r) * var(--u) - var(--w) / 2) calc(var(--r) * var(--u) - var(--w) / 2) calc((var(--d) * var(--s) * var(--u)));
     --del: 0.5s; /* FLASH SPEED */
     animation: neptune-flash linear var(--del) infinite;
     animation-delay: calc(var(--c) * var(--del) / var(--t));
