I don't trust that this'll work

--- a/webserver/mysite/webapp/static/webapp/test_for_animation.css
+++ b/webserver/mysite/webapp/static/webapp/test_for_animation.css
@@ -653,16 +653,10 @@ div {
 
 @keyframes rotates {
     from {
-        transform: 
-            rotatex(0)
-            rotatey(0)
-            rotatez(0);
+        transform: rotateY(30deg) rotateX(0deg);
     }
     to {
-        transform: 
-            rotatex(360deg)
-            rotatey(720deg)
-            rotatez(360deg);
+        transform: rotateY(30deg) rotateX(360deg);
     }
 }
 
