--- a/webserver/mysite/webapp/templates/webapp/test_for_animation.pug
+++ b/webserver/mysite/webapp/templates/webapp/test_for_animation.pug
@@ -13,10 +13,13 @@
 <div id="explain_box">
 <h1>Hello everyone !</h1>
 </div>
+
 <div id="solar_system" class="planets-container">
 
+<!-- MERCURY -->
 <div class="MERCURY">
-<div style="--t: {{ t2_plus_1 }}" class="mercury-globe">
+<div class="planet-tilt">
+<div class="planet-spin" style="--t: {{ t2_plus_1 }}">
 <div style="--c: {{ t }}" class="line radius h mercury-h"></div>
 {% for line in positive_lines %}
 <div style="--dp: {{ line.dp }}; --s:-1; --c: {{ line.c }}" class="line h mercury-h"></div>
@@ -26,9 +29,12 @@
 {% endfor %}
 </div>
 </div>
+</div>
 
+<!-- SUN -->
 <div class="SUN">
-<div style="--t: {{ t2_plus_1 }}" class="sun-globe">
+<div class="planet-tilt">
+<div class="planet-spin" style="--t: {{ t2_plus_1 }}">
 <div style="--c: {{ t }}" class="line radius h sun-h"></div>
 {% for line in positive_lines %}
 <div style="--dp: {{ line.dp }}; --s:-1; --c: {{ line.c }}" class="line h sun-h"></div>
@@ -38,9 +44,12 @@
 {% endfor %}
 </div>
 </div>
+</div>
 
+<!-- VENUS -->
 <div class="VENUS">
-<div style="--t: {{ t2_plus_1 }}" class="venus-globe">
+<div class="planet-tilt">
+<div class="planet-spin" style="--t: {{ t2_plus_1 }}">
 <div style="--c: {{ t }}" class="line radius h venus-h"></div>
 {% for line in positive_lines %}
 <div style="--dp: {{ line.dp }}; --s:-1; --c: {{ line.c }}" class="line h venus-h"></div>
@@ -50,9 +59,12 @@
 {% endfor %}
 </div>
 </div>
+</div>
 
+<!-- EARTH -->
 <div class="EARTH">
-<div style="--t: {{ t2_plus_1 }}" class="earth-globe">
+<div class="planet-tilt">
+<div class="planet-spin" style="--t: {{ t2_plus_1 }}">
 <div style="--c: {{ t }}" class="line radius h earth-h"></div>
 {% for line in positive_lines %}
 <div style="--dp: {{ line.dp }}; --s:-1; --c: {{ line.c }}" class="line h earth-h"></div>
@@ -62,9 +74,12 @@
 {% endfor %}
 </div>
 </div>
+</div>
 
+<!-- MARS -->
 <div class="MARS">
-<div style="--t: {{ t2_plus_1 }}" class="mars-globe">
+<div class="planet-tilt">
+<div class="planet-spin" style="--t: {{ t2_plus_1 }}">
 <div style="--c: {{ t }}" class="line radius h mars-h"></div>
 {% for line in positive_lines %}
 <div style="--dp: {{ line.dp }}; --s:-1; --c: {{ line.c }}" class="line h mars-h"></div>
@@ -74,9 +89,12 @@
 {% endfor %}
 </div>
 </div>
+</div>
 
+<!-- JUPITER -->
 <div class="JUPITER">
-<div style="--t: {{ t2_plus_1 }}" class="jupiter-globe">
+<div class="planet-tilt">
+<div class="planet-spin" style="--t: {{ t2_plus_1 }}">
 <div style="--c: {{ t }}" class="line radius h jupiter-h"></div>
 {% for line in positive_lines %}
 <div style="--dp: {{ line.dp }}; --s:-1; --c: {{ line.c }}" class="line h jupiter-h"></div>
@@ -86,9 +104,12 @@
 {% endfor %}
 </div>
 </div>
+</div>
 
+<!-- SATURNE -->
 <div class="SATURNE">
-<div style="--t: {{ t2_plus_1 }}" class="saturne-globe">
+<div class="planet-tilt">
+<div class="planet-spin" style="--t: {{ t2_plus_1 }}">
 <div style="--c: {{ t }}" class="line radius h saturne-h"></div>
 {% for line in positive_lines %}
 <div style="--dp: {{ line.dp }}; --s:-1; --c: {{ line.c }}" class="line h saturne-h"></div>
@@ -98,9 +119,12 @@
 {% endfor %}
 </div>
 </div>
+</div>
 
+<!-- URANUS -->
 <div class="URANUS">
-<div style="--t: {{ t2_plus_1 }}" class="uranus-globe">
+<div class="planet-tilt">
+<div class="planet-spin" style="--t: {{ t2_plus_1 }}">
 <div style="--c: {{ t }}" class="line radius h uranus-h"></div>
 {% for line in positive_lines %}
 <div style="--dp: {{ line.dp }}; --s:-1; --c: {{ line.c }}" class="line h uranus-h"></div>
@@ -110,9 +134,12 @@
 {% endfor %}
 </div>
 </div>
+</div>
 
+<!-- NEPTUNE -->
 <div class="NEPTUNE">
-<div style="--t: {{ t2_plus_1 }}" class="neptune-globe">
+<div class="planet-tilt">
+<div class="planet-spin" style="--t: {{ t2_plus_1 }}">
 <div style="--c: {{ t }}" class="line radius h neptune-h"></div>
 {% for line in positive_lines %}
 <div style="--dp: {{ line.dp }}; --s:-1; --c: {{ line.c }}" class="line h neptune-h"></div>
@@ -120,6 +147,7 @@
 {% for line in negative_lines %}
 <div style="--dp: {{ line.dp }}; --s:1; --c: {{ line.c }}" class="line h neptune-h"></div>
 {% endfor %}
+</div>
 </div>
 </div>
 
